sudoku crash fixed, 8 queens added.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">AiGames</string>
+    <string name="_8_queens">8 Queens</string>
+    <string name="solutions_count">%d solutions found</string>
 </resources>
